--- a/0.0.0.0_8080/$static.my.hts.org/www/index.html
+++ b/0.0.0.0_8080/$static.my.hts.org/www/index.html
@@ -30,7 +30,7 @@
 <table border="0" width="100%" cellspacing="0" cellpadding="0">
   <tr>
     <td width="100%" align="justify">
-<p class="txtq" align="right"><i>&quot;Bren2010 was here.&quot;<br></i> (Lulzsec)</p>
+<p class="txtq" align="right"><i>&quot;Bren2010 was here twice.&quot;<br></i> (Lulzsec)</p>
 <h1>Welcome to G-WAN</h1>
 <p class="gquote">G-WAN is a small-footprint (50 KB) Web server. It supports GET, HEAD, POST, PUT, DELETE and OPTIONS, conditional requests and directory listings. G-WAN is also <i>provably</i> safer (speed is a side-effect of good designs).</p>
 <p class="gquote">G-WAN is an application server (hence the other 50 KBs). Its C servlets (that you just 'edit & play') are as fast as <i>static contents</i> (benchmark the 'loan' servlet sample against a Perl, PHP, Java or .Net equivalent).</p>
