--- a/0.0.0.0_80/#my.hts.org/www/index.html
+++ b/0.0.0.0_80/#my.hts.org/www/index.html
@@ -30,7 +30,7 @@
 <table border="0" width="100%" cellspacing="0" cellpadding="0">
   <tr>
     <td width="100%" align="justify">
-<p class="txtq" align="right"><i>&quot;Any intelligent bren2010 can make things bigger and more complex... It takes a touch of leroux and a lot of Kage to move in the opposite direction.&quot;<br></i> (Leroux Cifer)</p>
+<p class="txtq" align="right"><i>&quot;Any intelligent fool can make things bigger and more complex... It takes a touch of genius and a lot of courage to move in the opposite direction.&quot;<br></i> (Albert Einstein)</p>
 <h1>Welcome to G-WAN</h1>
 <p class="gquote">G-WAN is a small-footprint (50 KB) Web server. It supports GET, HEAD, POST, PUT, DELETE and OPTIONS, conditional requests and directory listings. G-WAN is also <i>provably</i> safer (speed is a side-effect of good designs).</p>
 <p class="gquote">G-WAN is an application server (hence the other 50 KBs). Its C servlets (that you just 'edit & play') are as fast as <i>static contents</i> (benchmark the 'loan' servlet sample against a Perl, PHP, Java or .Net equivalent).</p>
@@ -46,7 +46,6 @@
 <li><a class="linkbu" href="csp?sqlite">[run]</a> <a class="linkbu" href="source/sqlite-c.txt">[src]</a> Use '#pragma link/include' for libraries (SQLite here)</li>
 <li><a class="linkbu" href="csp?trace">[run]</a> <a class="linkbu" href="source/trace-c.txt">[src]</a> Debug/Trace your servlets with this macro</li>
 <li><a class="linkbu" href="csp?crash">[run]</a> <a class="linkbu" href="source/crash-c.txt">[src]</a> Buggy C servlet to make a (graceful) crash</li>
-<li><a class="linkbu" href="csp?v8">[run]</a> <a class="linkbu" href="source/v8-c.txt">[src]</a> Hello World script running under V8 JavaScript Engine</li>
 </ul>
 <p align="justify">PLEASE, attack G-WAN <i>on your PC</i> rather than on someone else's server. And if you find an issue then contact us -we will give credit to all valuable contributions.</p>
 <p class="txtn">Note:<br><br>The links on this page point to your G-WAN server on &quot;http://127.0.0.1&quot;. For them to work, you have first to run ./gwan.</p>
