Just messing with the HTML stuff.

--- a/127.0.0.1_8080/#my.hts.org/www/index.html
+++ b/127.0.0.1_8080/#my.hts.org/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>G-WAN > Web Application Server > Download</title>
+<title>HackThisSite v5 Development</title>
 <meta name="author" content="TrustLeap">
 <meta name="description" content="Download G-WAN now to start building extraordinary applications!">
 <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 </head><body><div id="wrap"><div id="main">
 
 <div id="header" class="page"><div class="tabmenu">
-<a href="http://gwan.ch/" class="title">G-WAN web server</a>
+<a href="http://hts.fezrev.com/" class="title">HackThisSite v5</a>
 <ul>
   <li><a href="http://gwan.ch/about">About</a></li>
   <li><a href="http://gwan.ch/buy">Buy Now</a></li>
@@ -127,7 +127,7 @@
 
 </div></div><div id="footer">
 <p class="left">Powered by &nbsp;<b>G-WAN</b></p> 
-<p class="right">Copyright &copy; 2007 - 2011 TrustLeap. All Rights Reserved. 
+<p class="right">Copyright &copy; 2012 HackThisSite. All Rights Reserved. 
  &nbsp; &nbsp; &nbsp; <a href="http://gwan.ch/legal">Legal information</a></p> 
 </div>
 
