--- a/127.0.0.1_8080/#my.hts.org/www/index.html
+++ b/127.0.0.1_8080/#my.hts.org/www/index.html
@@ -2,8 +2,8 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>HackThisSite v5 Development</title>
-<meta name="author" content="TrustLeap">
-<meta name="description" content="Download G-WAN now to start building extraordinary applications!">
+<meta name="author" content="HackThisSite">
+<meta name="description" content="HackThisSite v5 Developement Site">
 <meta charset="UTF-8">
 <link href="/imgs/style.css" rel="stylesheet">
 </head><body><div id="wrap"><div id="main">
